@@ -1,3 +1,4 @@
+* Add authentication services
 * Don't catch TimeoutException in the error handler
 * Remove deprecated bytes_to_wsgi call
 * Add configuration entries for unaccent and similarity functions
